--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "devDependencies": {
     "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.6",
+    "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8",
     "vite-tsconfig-paths": "^5.1.4"
   }
